--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -397,6 +397,7 @@
             top: 0;
             bottom: 0;
             height: 1em;
+            line-height: 1em;
             margin: auto 0;
             z-index: 1;
             color: $placeholder-color;
