- makes input to stretch all the way to the right

--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -364,6 +364,7 @@
     &__input{
         $placeholder-width : 110px;
         @mixin placeholder-show{ opacity:.5; transform:none; };
+        flex: 1;
         display: block;
         min-width: $placeholder-width;
         margin: $tagMargin;
