fixes #536 - Readonly for mode='mix' hides all elements

--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -120,7 +120,7 @@
     }
 
     // Global "read-only" mode (no input button)
-    &[readonly]{
+    &[readonly]:not(.tagify--mix){
         cursor: default;
         > #{ $self }__input{
             visibility: hidden;
