--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -578,7 +578,7 @@
         }
 
         // when the dropdown shows next to the caret while typing
-        &--text{
+        &[position="text"]{
             box-shadow: 0 0 0 3px rgba(var(--tagify-dd-color-primary), .1);
             font-size: .9em;
             #{$dropdown}__wrapper{
