--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -381,9 +381,8 @@
     // Holds the placeholder & the tags input
     &__input{
         $placeholder-width : 110px;
-        @mixin placeholder-show{ opacity:.5; transform:none; };
         flex-grow: 1;
-        display: block;
+        display: inline-block;
         min-width: $placeholder-width;
         margin: $tagMargin;
         padding: $tag-pad;
@@ -394,8 +393,6 @@
         color: $input-color;
         color: var(--input-color);
 
-        &::before{ display:inline-block; width:0; }
-
         &:empty{
             @include firefox {
               // clicking twice on the input (not fast) disallows typing (bug) only when the input has "display:flex".
@@ -403,11 +400,20 @@
               //  display: flex; // https://bugzilla.mozilla.org/show_bug.cgi?id=904846#c45
             }
 
-            &::before{ @include placeholder; width:auto; }
+            &::before{
+                @include placeholder;
+                display: inline-block;
+                width: auto;
+
+                #{ $self }--mix &{
+                    display: inline-block;
+                }
+            }
         }
 
         &:focus{
             outline:none;
+
             &::before{
                 @include placeholder(false);
                 @include firefox {
@@ -424,6 +430,7 @@
                     display: none;
                 }
             }
+
             &:empty{
                 &::before{
                     @include placeholder(true);
@@ -444,7 +451,6 @@
                 }
             }
         }
-       // &:empty:focus{ padding:$tag-pad; }
 
         &::before{
             content: attr(data-placeholder);
@@ -458,7 +464,8 @@
             pointer-events: none;
             opacity: 0;
 
-            #{ $self }--mix &{
+            #{$self}--mix &{
+                display: none;
                 position: static;
                 line-height: inherit;
             }
@@ -500,14 +507,14 @@
     }
 
     &--mix {
-        line-height: 1.7;
+        display: block; // display:flex makes Chrome generates <div><br></div> when pressing ENTER key
 
         #{ $self }__input{
             padding: $tagMargin;
             margin: 0;
             width: 100%;
             height: 100%;
-            line-height: inherit;
+            line-height: 1.5;
 
             &::before{ height:auto; }
 
