Add new option "preserveWhiteSpace" preventing values to be trimmed before being added as tags. Rename "getInvaildTagParams" to getInvalidTagParams" Updated "isTagWhitelisted" documentation

--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -178,6 +178,10 @@
         cursor     : default;
         transition : .13s ease-out;
 
+        &--whitespace > div > span {
+            white-space: pre;
+        }
+
         > div{  // :not([contenteditable])
             vertical-align : top;
             box-sizing     : border-box;
