--- a/docs/codepen.css
+++ b/docs/codepen.css
@@ -1,13 +1,49 @@
 body{
-    display:grid;
-    place-items:center;
-    height:100vh;
-}
-
-.tagify{
-    max-width: 700px;
-    width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  padding: 12em 0;
+  box-sizing: border-box;
 }
 
 .pen-intro{
+
+}
+
+.repoLink{
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 360px;
+}
+
+input{
+  order: 5;
+}
+
+label[for='checkbox-tagify-show-input']{
+  position: absolute;
+  top: .85em;
+  left: 2.5em;
+
+}
+
+label[for='checkbox-tagify-show-input'] + input{
+  position: absolute;
+  top: 1em;
+  left: 1em;
+  transform: scale(1.4);
+}
+
+label[for='checkbox-tagify-show-input'] + input:checked ~ input,
+label[for='checkbox-tagify-show-input'] + input:checked ~ textarea{
+  display: block !important;
+  width: 100%;
+  max-width: 700px;
+  margin-top: 1.5em;
+}
+
+label[for='checkbox-tagify-show-input'] + input:checked ~ textarea{
+    min-height: 11ch;
 }
