--- a/docs/codepen.css
+++ b/docs/codepen.css
@@ -2,6 +2,7 @@ body{
   height: 100vh;
   display: flex;
   flex-flow: column;
+  align-items: center;
   justify-content: center;
   padding: 12em 0;
   box-sizing: border-box;
