fixed edited tag with custom template to be able to revert back

--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -322,6 +322,8 @@
                 }
             }
 
+            > #{$self}__tag__removeBtn{ visibility: hidden; }
+
             &.tagify--invalid{
                 > div{
                     &::before{
