--- a/docs/codepen.css
+++ b/docs/codepen.css
@@ -16,7 +16,9 @@ body{
   position: absolute;
   top: 0;
   right: 0;
-  width: 360px;
+  width: 18%;
+  max-width: 360px;
+  min-width: 160px;
 }
 
 input{
