--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -628,6 +628,7 @@
             background: var(--tagify-dd-bg-color);
             border: 1px solid $tags-focus-border-color;
             border-color: var(--tagify-dd-color-primary);
+            border-width: 1.1px; // fixes - https://bugs.chromium.org/p/chromium/issues/detail?id=1147523
             border-top-width: 0;
             box-shadow: 0 2px 4px -2px rgba(black,.2);
            // box-sizing: border-box;
